make the circles bounce the opposite direction when clicked

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@ box1 {
     </form>
 
   <p>Change speed of circles: (1 - 6):
-    <input type="number" id="speed" value="1" min="0" max="6">  
+    <input type="number" id="speed" value="3" min="0" max="6">  
     <output id = "speedNumber"></output>
   </p>
 
-  <p>Click a circle and it will start to bounce around the screen, instead of moving in a circular motion.</p>
+  <p>Click the circles to make them bounce around the screen!</p>
   
-  <p>Click the button to reset the movement of the circles:</p>
+  <p>Resset the movement of the circles:</p>
   <input type="button" id="reset" onclick = reset() value="Reset">
 
 
