adding the documentation for the HTML input elements and CSS

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ box1 {
 </box1>
 
 <div id="sketch-holder">
-  <!-- Our sketch will go here! -->
+  <!-- sketch will go here -->
 </div>
 
 </body>
