--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ p {
 box1 {
   float: left;
   width: 30%;
-  height: 750px; /* only for demonstration, should be removed */
+  height: 750px;
   background: #ccc;
   padding: 10px;
 }
@@ -82,7 +82,7 @@ box1 {
 </box1>
 
 <div id="sketch-holder">
-  <!-- sketch will go here -->
+  <!--sketch-->
 </div>
 
 </body>
